Add README with instructions/examples, and fixed a bug for probing/scanning caused by accessing a non-existing argument

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,8 @@
 *
 # Except for:
 !.gitignore
-!requirements.txt
+!README.md
 !/src
 !/src/*.py
 !/example-files/
 !/example-files/**/*
-!requirements.txt
